runs/github.com/u/udacity/deep-learning-v2-pytorch/logs/test-notebook-intro-neural-networks-student-admissions-StudentAdmissions.ipynb-2020-07-03T06.55.txt
[I 200703 06:59:04 inrepo:35] Testing notebook intro-neural-networks/student-admissions/StudentAdmissions.ipynb
[I 200703 06:59:05 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 76, in <module>
    main()
  File "/src/inrepo.py", line 72, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 38, in run_notebook
    exported = executenb(nb, cwd=os.path.dirname(nb_path))
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
# TODO:  Make dummy variables for rank and concat existing columns
one_hot_data = pass

# TODO: Drop the previous rank column
one_hot_data = pass

# Print the first 10 rows of our data
one_hot_data[:10]
------------------

[0;36m  File [0;32m"<ipython-input-4-4c5c2fb7e942>"[0;36m, line [0;32m2[0m
[0;31m    one_hot_data = pass[0m
[0m                      ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-4-4c5c2fb7e942>, line 2)


Container exited with status: {'Error': None, 'StatusCode': 1}
